run that action baby

--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -8,3 +8,12 @@ jobs:
     steps:
     - name: 'Cool Cool'
       run: echo "🫘🫘"
+
+  loggingCo:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Code 👀
+      uses: actions/checkout@v4
+
+    - name: List out 📃
+      run: ls
