send in the crew

--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -21,5 +21,11 @@ jobs:
     - name: Print env ⚙️
       run: cat ./src/env.js
 
-    - name: Build Project 🏗️
-      run: npm run build
+    - name: Find Logs 🦫
+      run: |
+        echo "🦫🦫🦫 Sending in the professionals" 
+        grep -ro 'console\.log' .
+        echo "🦫 Jobs Done"
+
+    # - name: Build Project 🏗️
+    #   run: npm run build
