--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Find Logs 🦫
       run: |
         echo "🦫🦫🦫 Sending in the professionals" 
-        grep -ro 'console\.log' . | wc -1
+        grep -ro 'console\.log' . | sed 's/:/ /'
         echo "🦫 Jobs Done"
 
     # - name: Build Project 🏗️
