how could i be such a fool

--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Find Logs 🦫
       run: |
         echo "🦫🦫🦫 Sending in the professionals" 
-        grep -ro 'console\.log' . | sed 's/:/ /'
+        grep -rno 'console\.log' .
         echo "🦫 Jobs Done"
 
     # - name: Build Project 🏗️
