--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -26,9 +26,12 @@ jobs:
         echo "🦫🦫🦫 Sending in the professionals" 
         grep -rno 'console\.log' .
         echo "🦫 Jobs Done"
-        find . -type f -name "*.js" -exec sed -i '/console\.log/d' {} +
 
-    # - name: Find
+    - name: Find Keys 👶
+      run: |
+        echo "The baby is loose and will put any keys it finds in its mouth"
+        grep -rno '*key' .
+        echo "done i guess"
 
     # - name: Build Project 🏗️
     #   run: npm run build
