--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Find Keys 👶
       run: |
         echo "The baby is loose and will put any keys it finds in its mouth"
-        grep -rno '*key' .
+        grep -rno 'key' .
         echo "done i guess"
 
     # - name: Build Project 🏗️
