--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -57,7 +57,7 @@ jobs:
           node-version: 22
 
       - name: Install Dependencies 📦
-        run: npm ci
+        run: npm i
 
       - name: Build the Project 🏗️
         run: npm run build
