--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -1,6 +1,8 @@
 name: Test Guy
 
-on: [push]
+on: 
+  push:
+    branches: ['main']
 
 permissions:
   contents: read
@@ -46,6 +48,8 @@ jobs:
     # url: ${{ steps.deployment.outputs.page_url }
 
     runs-on: ubuntu-latest
+
+    if: contains(github.event.head_commit.message, 'send it')
 
     steps:
       - name: checkout 👀
