--- a/.github/workflows/logChecker.yaml
+++ b/.github/workflows/logChecker.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: 'Cool Cool'
-      run: echo "🫘🫘"
+      run: echo "🫘🫘🫘"
 
   loggingCo:
     runs-on: ubuntu-latest
